RESOLVED FIXED280038
[Writing Tools] There is a brief flicker where there is no text during a rewrite animation
https://bugs.webkit.org/show_bug.cgi?id=280038
Summary [Writing Tools] There is a brief flicker where there is no text during a rewr...
Richard Robinson
Reported 2024-09-19 20:07:16 PDT
Attachments
Richard Robinson
Comment 1 2024-09-19 20:19:08 PDT
EWS
Comment 2 2024-09-20 12:40:43 PDT
Committed 284003@main (e1f85b19921a): <https://commits.webkit.org/284003@main> Reviewed commits have been landed. Closing PR #33953 and removing active labels.
EWS
Comment 3 2024-09-20 18:35:24 PDT
Committed 280938.368@safari-7619-branch (f74787a2ec74): <https://commits.webkit.org/280938.368@safari-7619-branch> Reviewed commits have been landed. Closing PR #1877 and removing active labels.
EWS
Comment 4 2024-09-24 12:14:16 PDT
Committed 283286.122@safari-7620-branch (174c24df0351): <https://commits.webkit.org/283286.122@safari-7620-branch> Reviewed commits have been landed. Closing PR #1890 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.